--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{min-width:320px;background:#f8f8f8;font:12px/1.5 "Microsoft Yahei","Arial";
 .main{width:100%;max-width:768px;min-height:176px;margin:0 auto;position:relative;overflow:hidden;}
 .header{height:32px;padding:13px 0;text-align:center;border-bottom:1px solid #dcdcdc;position:relative;display:block;margin:0 auto;height:19px;}
 .info{display:inline-block;width:62%;text-align:center;margin-left:48px;}
-#city{width:64px;height:26px;cursor:pointer;font-size: 16px;}
+#city{width:54px;height:26px;cursor:pointer;font-size: 15px;}
 /*套在Select外层，用于隐藏Select框*/
 .DivSelect{display:inline-block;float:right;right:0%;position:relative;background-color:transparent;height:18px;/*overflow: hidden; /*隐藏了小三角，因为宽度为110px,而select宽度为130px*/border-width:0px;border-top-style:none;border-right-style:none;border-left-style:none;border-bottom-style:none;}
 /*设置Select样式*/
@@ -36,12 +36,12 @@ body{min-width:320px;background:#f8f8f8;font:12px/1.5 "Microsoft Yahei","Arial";
 .index-banner{position:relative;overflow:hidden;-webkit-backface-visibility:hidden;z-index:1;width:100%;}
 .index-banner .swiper-wrapper li{float:left}
 .index-banner .swiper-wrapper li img{width:100%;height:100%;display:none;}
-.index-banner .index-pagination{position:absolute;right:0px;bottom:0;width:100%;background:rgba(0, 0, 0, 0.6);height:18%}
+.index-banner .index-pagination{position:absolute;right:0px;bottom:0;width:100%;background:rgba(0, 0, 0, 0.6);height:19%}
 .index-banner .index-pagination span{width:2.8%;height:34%;margin-top:2.6%;margin-right:2%;border-radius:50%;background:#797979;float:right;display:inline-block;}
 .index-banner .index-pagination span.swiper-active-switch{background:#fff;}
 .index-banner .banner-title{position:absolute;left:3%;bottom:1.9%;color:#fff;font-size:1.7em;z-index:100;}
 
-.new-act{position:absolute;width:41%;display:inline-block;height:72px;line-height:72px;text-align:center;margin:0 4px;}
+.new-act{position:absolute;width:41%;display:inline-block;height:76px;line-height:76px;text-align:center;margin:0 4px;border-left: 1px solid #dfdfdf;}
 
 .hongbao-quan{height:76px;border-top:1px solid #dfdfdf;border-bottom:1px solid #dfdfdf;margin:10px auto;}
 .quan-style{width:40px;height:40px;border-radius:5px;background:url('../images/icon/youhui1.png') no-repeat;margin: 0 auto;background-size:100%;}
@@ -123,7 +123,7 @@ background-size:cover;
 /*
  * 优惠券、红包 样式
  */
-.box{margin:0 auto 12px auto;width:100%;height:100%;/* display:none; */}
+.box{margin:0 auto 12px auto;width:100%;height:100%;display:none;}
 .span1{width:62%;position:relative;border:1px solid;margin:2% 0 2% 9%;}
 .span1 p{line-height:20px;padding:0px 4px;}
 .span2{width:20%;border:1px solid;margin:2% 0 2% 0;}
