--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,15 @@ select::-ms-expand {display:none;}
  */
 body{min-width:320px;background:#f8f8f8;font:12px/1.5 "Microsoft Yahei","Arial";color:#888;-webkit-text-size-adjust:none;-moz-text-size-adjust:none;}
 .main{width:100%;max-width:768px;min-height:176px;margin:0 auto;position:relative;overflow:hidden;}
-.header{height:32px;padding:13px 0;text-align:center;border-bottom:1px solid #dcdcdc;position:relative;display:block;margin:0 auto;height:19px;}
-.info{display:inline-block;width:62%;text-align:center;margin-left:48px;}
+.header{height:32px;padding:13px 0;text-align:center;border-bottom:1px solid #dcdcdc;position:fixed;display:block;margin:0 auto;height:19px;width:100%;max-width:768px;z-index:1994;background:#f8f8f8;}
+.info{display:inline-block;width:70%;text-align:left;float:left;margin-left:2.5%;line-height:20px;}
 #city{width:54px;height:26px;cursor:pointer;font-size: 15px;}
 /*套在Select外层，用于隐藏Select框*/
-.DivSelect{display:inline-block;float:right;right:0%;position:relative;background-color:transparent;height:18px;/*overflow: hidden; /*隐藏了小三角，因为宽度为110px,而select宽度为130px*/border-width:0px;border-top-style:none;border-right-style:none;border-left-style:none;border-bottom-style:none;}
+.DivSelect{display:inline-block;float:right;right:1%;position:relative;background-color:transparent;height:18px;/*overflow: hidden; /*隐藏了小三角，因为宽度为110px,而select宽度为130px*/border-width:0px;border-top-style:none;border-right-style:none;border-left-style:none;border-bottom-style:none;}
 /*设置Select样式*/
 .SelectList{position:relative;background-color:transparent;top:-2px;left:-2px;border-width:0px;border-top-style:none;border-right-style:none;border-left-style:none;border-bottom-style:none;}
 
-.index-banner{position:relative;overflow:hidden;-webkit-backface-visibility:hidden;z-index:1;width:100%;}
+.index-banner{position:relative;overflow:hidden;-webkit-backface-visibility:hidden;z-index:1;width:100%;margin-top:46px;}
 .index-banner .swiper-wrapper li{float:left}
 .index-banner .swiper-wrapper li img{width:100%;height:100%;display:none;}
 .index-banner .index-pagination{position:absolute;right:0px;bottom:0;width:100%;background:rgba(0, 0, 0, 0.6);height:19%}
@@ -52,17 +52,17 @@ body{min-width:320px;background:#f8f8f8;font:12px/1.5 "Microsoft Yahei","Arial";
 .box-p{text-align:center;font-size:14px;margin:8px 0;}
 
 .goodslist{overflow:hidden;margin:0px 10px;}
-.goodslist li{float:left;width:100%;text-align:center;padding:20px 0;border-top:2px solid #fff;}
-.goodslist li img{display:block;border-radius:10px;width:150px;height:100px;}
+.goodslist li{float:left;width:100%;text-align:center;padding:20px 0 10px 0;border-top:2px solid #fff;}
+.goodslist li img{display:block;/* border-radius:10px; */width:150px;height:100px;}
 .goodslist li span{font-weight:normal;height:24px;line-height:24px;font-size:14px;margin-top:3px;overflow:hidden;}
 .goodslist li p{line-height:18px;height:18px;overflow:hidden;}
 .goodslist li .btn_down{display:block;width:74px;border-radius:8px;height:28px;line-height:28px;color:#fff;margin:6px auto 0;background-color:#4398d1;text-align:center;}
 
 .gl{display:inline-block;width:100%;}
 .gl-left{width:50%;display:inline-block;float:left;position:relative;}
-.gl-right{width:49%;display:inline-block;float:right;}
+.gl-right{width:48%;display:inline-block;float:right;}
 
-.i_box{margin:10px 20px;font-size:14px;}
+.i_box{margin:10px 10px;font-size:14px;}
 .i_box *{vertical-align:middle}
 .i_box a{padding:2px 5px;background-color:#e9e9e9;border:1px solid #ccc;text-decoration:none;color:#585858;line-height:20px}
 .i_box a:hover {color:#000}
@@ -150,7 +150,7 @@ background-size:cover;
  * 购物车cart 样式
  */
 .linkman_div{width:90%;height:100%;}
-.linkman{margin-left:10px;line-height:28px;}
+.linkman{margin-left:10px !important;line-height:28px !important;}
 
 .time_info{width:66%;display:inline-block;text-align:right;height:60px;line-height:28px;}
 .time_l{margin-left:10px;}
